// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Anchor.vue > snapshot 1`] = `
"<div class="ty-anchor ty-anchor--vertical">
  <div class="ty-anchor__marker"></div>
  <div class="ty-anchor__list">
    <div class="ty-anchor__item"><a class="ty-anchor__link" href="#anchor-link-0">#anchor-link-0</a>
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`Anchor.vue > snapshot 2`] = `
"<div class="ty-anchor ty-anchor--horizontal">
  <div class="ty-anchor__marker"></div>
  <div class="ty-anchor__list">
    <div class="ty-anchor__item"><a class="ty-anchor__link" href="#anchor-link-0">#anchor-link-0</a>
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`Anchor.vue > snapshot 3`] = `
"<div class="ty-anchor ty-anchor--underline ty-anchor--vertical">
  <div class="ty-anchor__marker"></div>
  <div class="ty-anchor__list">
    <div class="ty-anchor__item"><a class="ty-anchor__link" href="#anchor-link-0">#anchor-link-0</a>
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`Anchor.vue > snapshot 4`] = `
"<div class="ty-anchor ty-anchor--underline ty-anchor--horizontal">
  <div class="ty-anchor__marker"></div>
  <div class="ty-anchor__list">
    <div class="ty-anchor__item"><a class="ty-anchor__link" href="#anchor-link-0">#anchor-link-0</a>
      <!--v-if-->
    </div>
  </div>
</div>"
`;
